--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,1 +1,22 @@
 @import "tailwindcss";
+
+
+body {
+    font-family: 'Poppins', sans-serif;
+}
+
+@keyframes slideIn {
+    0% {
+        transform: translateX(100%);
+        opacity: 0;
+    }
+
+    100% {
+        transform: translateX(0);
+        opacity: 1;
+    }
+}
+
+.animate-slideIn {
+    animation: slideIn 0.5s ease-out forwards;
+}
